# qikkdb

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  CSVParser.hpp  ColmnarDB.Benchmark.sln  Dockerfile  Dockerfile-community  LICENSE.txt  NOTICE.txt  QikkDB.sln  README.md  docker-compose.yml  doxygen.cfg  dropdbase.sln  gendoc.sh
NetworkingCpp/: CMakeLists.txt
NetworkingCpp/TellStoryDB.NetworkClient/: CMakeLists.txt  DataType.h  NetworkClient.cpp  NetworkClient.h  NetworkMessage.cpp  NetworkMessage.h  main.cpp
NetworkingCpp/TellStoryDB.NetworkClient/Types/: Point.pb.cc  Point.pb.h
NetworkingCpp/TellStoryDB.NetworkClient/messages/: BulkImportMessage.pb.cc  BulkImportMessage.pb.h  CSVImportMessage.pb.cc  CSVImportMessage.pb.h  CSVImportMessage.proto  InfoMessage.pb.cc  InfoMessage.pb.h  InfoMessage.proto  QueryResponseMessage.pb.cc  QueryResponseMessage.pb.h  SetDatabaseMessage.pb.cc  SetDatabaseMessage.pb.h
dropdbase/: BlockBase.cpp  BlockBase.h  CMakeLists.txt  CMakeSettings.json  CSVDataImporter.cpp  CSVDataImporter.h  CSVInMemoryImporter.cpp  CSVInMemoryImporter.h  ClientPoolWorker.cpp  ClientPoolWorker.h  ColumnBase.cpp  ColumnBase.h  ColumnType.h  ComplexPolygonFactory.cpp  ComplexPolygonFactory.h  Configuration.cpp  Configuration.h  ConsoleHandler.cpp  ConsoleHandler.h  ConstraintType.cpp  ConstraintType.h  ConstraintViolationError.cpp  ConstraintViolationError.h  CudaLogBoost.cpp  CudaLogBoost.h  DataType.cpp  DataType.h  Database.cpp  Database.h  DatabaseGenerator.cpp  DatabaseGenerator.h  DispatcherErrorCode.h  IBlock.h  IClientHandler.h  IColumn.h  ITCPWorker.cpp  ITCPWorker.h  IVariantArray.h  NativeGeoPoint.h  NetworkMessage.cpp  (+19 more)
dropdbase/Compression/: Compression.h  CompressionType.h  GPUCompression.cu  GPUCompression.cuh  GPUCompression.h
dropdbase/GpuSqlParser/: CpuSqlDispatcher.cpp  CpuSqlDispatcher.h  CpuWhereListener.cpp  CpuWhereListener.h  DataType.h  DataTypes.h  GpuSqlCustomParser.cpp  GpuSqlCustomParser.h  GpuSqlDispatcher.cpp  GpuSqlDispatcher.cu  GpuSqlDispatcher.h  GpuSqlDispatcherFriends.h  GpuSqlJoinDispatcher.cu  GpuSqlJoinDispatcher.h  GpuSqlJoinFunctions.cu  GpuSqlJoinFunctions.h  GpuSqlLexer.cpp  GpuSqlLexer.g4  GpuSqlLexer.h  GpuSqlLexer.interp  GpuSqlLexer.tokens  GpuSqlListener.cpp  GpuSqlListener.h  GpuSqlParser.cpp  GpuSqlParser.g4  GpuSqlParser.h  GpuSqlParser.interp  GpuSqlParser.tokens  GpuSqlParserBaseListener.cpp  GpuSqlParserBaseListener.h  GpuSqlParserListener.cpp  GpuSqlParserListener.h  GpuWhereEvaluationListener.cpp  GpuWhereEvaluationListener.h  GroupByType.h  InsertIntoStruct.h  JoinType.h  LoadColHelper.h  MemoryStream.cpp  MemoryStream.h  (+4 more)
dropdbase/GpuSqlParser/Dispatcher/: DispatcherMacros.h  GpuSqlDispatcherAggregationFunctions.cu  GpuSqlDispatcherAggregationFunctions.h  GpuSqlDispatcherArithmeticFunctions.cu  GpuSqlDispatcherArithmeticFunctions.h  GpuSqlDispatcherArithmeticUnaryFunctions.cu  GpuSqlDispatcherArithmeticUnaryFunctions.h  GpuSqlDispatcherBinaryFunctions.cu  GpuSqlDispatcherBinaryFunctions.h  GpuSqlDispatcherCastFunctions.cu  GpuSqlDispatcherCastFunctions.h  GpuSqlDispatcherDateFunctions.cu  GpuSqlDispatcherDateFunctions.h  GpuSqlDispatcherGeoFunctions.cu  GpuSqlDispatcherGeoFunctions.h  GpuSqlDispatcherInsertFunctions.cpp  GpuSqlDispatcherInsertFunctions.cu  GpuSqlDispatcherInsertFunctions.h  GpuSqlDispatcherJoinFunctions.cu  GpuSqlDispatcherJoinFunctions.h  GpuSqlDispatcherLogicFunctions.cu  GpuSqlDispatcherLogicFunctions.h  GpuSqlDispatcherOrderByFunctions.cu  GpuSqlDispatcherOrderByFunctions.h  GpuSqlDispatcherStringFunctions.cu  GpuSqlDispatcherStringFunctions.h  GpuSqlDispatcherUnaryFunctions.cu  GpuSqlDispatcherUnaryFunctions.h  GpuSqlDispatcherVMFunctions.cu  GpuSqlDispatcherVMFunctions.h
dropdbase/GpuSqlParser/DispatcherCpu/: CpuDispatcherArithmeticFunctions.cpp  CpuDispatcherArithmeticFunctions.h  CpuDispatcherArithmeticUnaryFunctions.cpp  CpuDispatcherArithmeticUnaryFunctions.h  CpuDispatcherCastFunctions.cpp  CpuDispatcherCastFunctions.h  CpuDispatcherDateFunctions.cpp  CpuDispatcherDateFunctions.h  CpuDispatcherGeoFunctions.cpp  CpuDispatcherGeoFunctions.h  (+10 more)
dropdbase/QueryEngine/: Allocator.cpp  Allocator.h  CPUJoinReorderer.cuh  Context.cpp  Context.cu  Context.cuh  Context.h  CudaMemAllocator.cu  CudaMemAllocator.h  DeviceChanger.cpp  DeviceChanger.h  DispatcherFunction.h  EngineCore.cuh  Error.h  GPUError.cpp  GPUError.h  GPUMemoryCache.cpp  GPUMemoryCache.h  GPUWhereFunctions.h  IAggregation.h  IArithmetic.h  IArtihmeticConst.h  IEngineCore.h  IFilter.h  IFilterConst.h  ILogic.h  IMemory.h  IPolygon.h  MemoryCache.cpp  MemoryCache.h  NullConstants.cuh  NullConstants.h  OrderByType.h  QueryEngineError.h
dropdbase/Types/: ComplexPolygon.pb.cc  ComplexPolygon.pb.h  Point.pb.cc  Point.pb.h
dropdbase/messages/: BulkImportMessage.pb.cc  BulkImportMessage.pb.h  BulkImportMessage.proto  CSVImportMessage.pb.cc  CSVImportMessage.pb.h  CSVImportMessage.proto  InfoMessage.pb.cc  InfoMessage.pb.h  QueryMessage.pb.cc  QueryMessage.pb.h  QueryResponseMessage.pb.cc  QueryResponseMessage.pb.h  QueryResponseMessage.proto  SetDatabaseMessage.pb.cc  SetDatabaseMessage.pb.h  SetDatabaseMessage.proto
dropdbase_test/: AllocatorTests.cpp  BlockTests.cpp  CMakeLists.txt  CSVDataImportTests.cpp  CacheTests.cpp  ClientHandlerTests.cpp  ColumnTests.cpp  CudaTests.cu  DatabaseTests.cpp  DispatcherAggregationTests.cpp  DispatcherAlterTests.cpp  DispatcherCastTests.cpp  DispatcherConstraintTests.cpp  DispatcherGeoTests.cpp  DispatcherGroupByTests.cpp  DispatcherNullTests.cpp  DispatcherObjs.h  DispatcherOrderByTests.cpp  DispatcherTests.cpp  DispatcherTestsRegression.cpp  GPUAggregationTests.cu  GPUArtithmeticTests.cu  GPUCompressionTests.cpp  GPUCompressionTests.cu  GPUDateTests.cu  GPUFilterTests.cu  GPUGroupByTests.cu  GPUJoinTests.cu  GPUMergeJoinTests.cu  GPUOrderByTests.cu  GPUPolygonClippingTests.cu  GPUReconstructTests.cu  IILExecutorTests.cpp  InsertIntoTests.cpp  OrderByMergeTests.cpp  ProtocolMessageTests.cpp  ShowTests.cpp  TCPServerTests.cpp  TableTests.cpp  dropdbase_test.vcxproj  (+1 more)
(+483 files in other folders)
